declarationFiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-hello-world
  name: nginx-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello-world
  template:
    metadata:
      labels:
        app: nginx-hello-world
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/ibtech-devops/nginx-hello-world:latest
          imagePullPolicy: Always
          name: nginx-hello-world
          ports:
            - containerPort: 8080
