declarationFiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-hello-world
  name: nginx-hello-world
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
  selector:
    app: nginx-hello-world
